[gd_scene load_steps=13 format=3 uid="uid://6s48fiwe8y1g"]

[ext_resource type="Script" path="res://character.gd" id="1_f8s51"]
[ext_resource type="Texture2D" uid="uid://dsbsuo15b8oot" path="res://disk.png" id="2_w7qhw"]
[ext_resource type="Texture2D" uid="uid://d2thtbfy3laah" path="res://demon.png" id="2_x43vg"]
[ext_resource type="Texture2D" uid="uid://ukigdb3yhrbl" path="res://electric_range.png" id="3_87txb"]
[ext_resource type="Texture2D" uid="uid://kbnpr0kexo42" path="res://spring.png" id="3_bryid"]
[ext_resource type="Texture2D" uid="uid://b3dqg7ro8bgcy" path="res://roll_dust/roll_dust1.png" id="3_dr85w"]
[ext_resource type="Texture2D" uid="uid://7v6k38infd6o" path="res://roll_dust/roll_dust2.png" id="4_c7s1q"]

[sub_resource type="Gradient" id="Gradient_2i853"]
offsets = PackedFloat32Array(0.0163934, 1)
colors = PackedColorArray(1, 1, 1, 0.964706, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_h3nah"]
_data = [Vector2(0.00699301, 0.0454545), 0.0, 0.0, 0, 0, Vector2(0.48951, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_lk5ig"]
radius = 81.0247

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nsxj5"]
radius = 48.0
height = 96.0

[sub_resource type="SpriteFrames" id="SpriteFrames_1xku0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dr85w")
}, {
"duration": 1.0,
"texture": ExtResource("4_c7s1q")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="Demon" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_f8s51")

[node name="DiskDust" type="CPUParticles2D" parent="."]
position = Vector2(0, 2)
emitting = false
amount = 12
lifetime = 0.5
texture = ExtResource("2_w7qhw")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 119.04
color_ramp = SubResource("Gradient_2i853")

[node name="NaturalElectricField" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(0, 2)
amount = 3
lifetime = 1.2
local_coords = true
texture = ExtResource("3_87txb")
gravity = Vector2(0, 0)
scale_amount_min = 1.4
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_h3nah")
color = Color(0.505882, 0.505882, 0.505882, 1)
color_ramp = SubResource("Gradient_2i853")

[node name="ActiveElectricField" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(0, 2)
scale = Vector2(0.978674, 1)
amount = 3
lifetime = 1.2
local_coords = true
texture = ExtResource("3_87txb")
gravity = Vector2(0, 0)
scale_amount_min = 1.4
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_h3nah")
color = Color(1, 0.247059, 0.188235, 0.705882)

[node name="ElectricFieldArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricFieldArea"]
shape = SubResource("CircleShape2D_lk5ig")

[node name="Springs" type="CPUParticles2D" parent="."]
position = Vector2(0, 2)
emitting = false
amount = 17
lifetime = 0.5
texture = ExtResource("3_bryid")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 178.56
color_ramp = SubResource("Gradient_2i853")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_x43vg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_nsxj5")

[node name="PreLazers" type="Node2D" parent="."]

[node name="Vertical" type="Line2D" parent="PreLazers"]
points = PackedVector2Array(0, -2000, 0, 2000)
width = 3.0
default_color = Color(1, 0, 0, 1)

[node name="Horizontal" type="Line2D" parent="PreLazers"]
rotation = 1.5708
points = PackedVector2Array(0, -2000, 0, 2000)
width = 3.0
default_color = Color(1, 0, 0, 1)

[node name="RollDust" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1xku0")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_nsxj5")
